# alliance_radar_location_lidar

./: .clangd  .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-image.yml  build.yml
.script/: banner  banner.sh  build-all  build-all-host  build-radar  build-radar-host  clean-radar  export-compile-commands  format-radar  foxglove  livox  odin  odin-localization  offline-test  run-radar  setup-clangd-headers  start-livox
.script/host/: radar
.script/template/: env_setup.bash  env_setup.zsh
docker/scripts/: 06_banner.sh  ow_logo.txt
docs/architecture/: alliance-radar-overall-architecture.md
model/: RMUC2026_l.fbx
ros_ws/src/radar_bridge/: CMakeLists.txt  package.xml
ros_ws/src/radar_bringup/: CMakeLists.txt  package.xml
ros_ws/src/radar_bringup/config/lidar/: odin_driver.yaml
ros_ws/src/radar_bringup/launch/: odin_localization.launch.py
ros_ws/src/radar_calibration/: CMakeLists.txt  package.xml
ros_ws/src/radar_calibration/config/: setting.yaml
ros_ws/src/radar_calibration/src/: camera_lidar_calibration.cpp  image_preprocess.hpp  model_preprocess.cpp  model_preprocess.hpp  pointcloud_capture.cpp  running.cpp
ros_ws/src/radar_camera/: CMakeLists.txt  package.xml
ros_ws/src/radar_fusion/: CMakeLists.txt  package.xml
ros_ws/src/radar_fusion/include/radar_fusion/: fusion_node.hpp  kalman_tracker.hpp
ros_ws/src/radar_fusion/src/: fusion_node.cpp  kalman_tracker.cpp  runtime.cpp
ros_ws/src/radar_fusion/test/: test_fusion_node.cpp
ros_ws/src/radar_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/radar_interfaces/msg/: Cluster.msg  ClusterArray.msg
ros_ws/src/radar_lidar/: CMakeLists.txt  package.xml
ros_ws/src/radar_lidar/config/: mid70.yaml  odin.yaml
ros_ws/src/radar_lidar/include/radar_lidar/: cluster.hpp  cluster_message.hpp  config.hpp  dynamic_cloud.hpp  frame_accumulator.hpp  localization.hpp  map_data.hpp  pipeline.hpp  spherical_grid.hpp  types.hpp
ros_ws/src/radar_lidar/src/: cluster.cpp  dynamic_cloud.cpp  frame_accumulator.cpp  localization.cpp  map_data.cpp  pipeline.cpp  runtime.cpp  spherical_grid.cpp
ros_ws/src/radar_lidar/test/: test_cluster_message.cpp  test_detection.cpp  test_localization.cpp  test_map_data.cpp
ros_ws/src/radar_lidar/tools/: registration_tool.cpp
ros_ws/src/radar_localization_lidar/: CMakeLists.txt  package.xml
ros_ws/src/radar_localization_lidar/config/: hikcamera_config.yaml  setting.yaml
ros_ws/src/radar_localization_lidar/model/: RMUC2026.fbx
ros_ws/src/radar_localization_lidar/src/: camera_lidar_calibration.cpp  image_preprocess.hpp  model_preprocess.cpp  model_preprocess.hpp  pointcloud_capture.cpp  pointcloud_capture.hpp  pointcloud_process.hpp  radar_localization_lidar_node.cpp  running.cpp
ros_ws/src/radar_model/: CMakeLists.txt  package.xml
script/: build_pure .sh  build_run.sh  radar  run.sh
tools/bag_to_pcd/: bag_to_pcd.py
tools/model_to_map/: CMakeLists.txt
tools/model_to_map/src/: model_to_map.cpp
tools/visualize/: view_pcd.py  view_registration.py
