<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_calibration</name>
  <version>0.0.1</version>
  <description>Camera-LiDAR calibration and localization</description>
  <maintainer email="huangziang_2024@qq.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>hikcamera</depend>
  <depend>libzmq3-dev</depend>
  <depend>libyaml-cpp-dev</depend>
  <depend>small_gicp</depend>
  <depend>ament_index_cpp</depend>
  <depend>ament_cmake_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
